feat(excel-rma): Add flow for rnd products to stock entry
add feature to delete draft sales invoice

--- a/packages/rma-frontend/src/app/sales-ui/view-sales-invoice/details/details.component.html
+++ b/packages/rma-frontend/src/app/sales-ui/view-sales-invoice/details/details.component.html
@@ -9,6 +9,13 @@
     <ion-icon name="lock-closed-outline"></ion-icon>
   </ion-fab-button>
   <ion-fab-list side="start" class="fab-position">
+    <ion-button
+    color="medium"
+    *ngIf="permissionState.sales_invoice.update"
+    (click)="deleteSalesInvoice()"
+  >
+    Delete
+  </ion-button>
     <ion-button *ngIf="permissionState.sales_invoice.delete" color="danger" (click)="rejectSalesInvoice()">
       Reject
     </ion-button>
