fix(excel-rma): Add fixes for stock and sales flow
fix non serial item not working on stock entry

update expense account to account and add to RnD products as well

--- a/packages/rma-frontend/src/app/purchase-ui/view-purchase-invoice/purchase-assign-serials/purchase-assign-serials.component.html
+++ b/packages/rma-frontend/src/app/purchase-ui/view-purchase-invoice/purchase-assign-serials/purchase-assign-serials.component.html
@@ -42,7 +42,7 @@
         </ion-grid>
     </ion-card-content>
 </ion-card>
-<app-assign-serial *ngIf="remaining > 0" [state]="state" (sendPickerState)="assignPickerState($event)" (sendCSVJSON)="addSerialsFromCsvJson($event)"></app-assign-serial>
+<app-assign-serial *ngIf="remaining > 0" [state]="state" [rangePickerState]="rangePickerState" (sendPickerState)="assignPickerState($event)" (sendCSVJSON)="addSerialsFromCsvJson($event)"></app-assign-serial>
 <ion-card *ngIf="remaining > 0">
     <ion-card-header>
         <ion-card-title>
