--- a/packages/rma-frontend/src/app/sales-ui/view-sales-invoice/serials/serials.component.html
+++ b/packages/rma-frontend/src/app/sales-ui/view-sales-invoice/serials/serials.component.html
@@ -43,7 +43,7 @@
         </ion-grid>
     </ion-card-content>
 </ion-card>
-<app-assign-serial *ngIf="remaining > 0" [state]="state" (sendPickerState)="assignPickerState($event)" (sendCSVJSON)="addSerialsFromCsvJson($event)"></app-assign-serial>
+<app-assign-serial *ngIf="remaining > 0" [state]="state" [rangePickerState]="rangePickerState" (sendPickerState)="assignPickerState($event)" (sendCSVJSON)="addSerialsFromCsvJson($event)"></app-assign-serial>
 
 <ion-grid class="ion-no-padding" *ngIf="salesInvoiceDetails && remaining === 0">
     <ion-row>
