--- a/packages/rma-frontend/src/app/sales-ui/add-sales-invoice/add-sales-invoice.page.html
+++ b/packages/rma-frontend/src/app/sales-ui/add-sales-invoice/add-sales-invoice.page.html
@@ -323,7 +323,7 @@
           <ng-container matColumnDef="stock">
             <mat-header-cell *matHeaderCellDef>Available Stock</mat-header-cell>
             <mat-cell *matCellDef="let row" [ngStyle]="{'color': row.stock > 0 ? 'green' : 'red'}">
-              {{row.stock > 0 ? 'Yes' : 'No'}}
+              {{ row.stock  }}
             </mat-cell>
             <mat-footer-cell *matFooterCellDef></mat-footer-cell>
           </ng-container>
