--- a/packages/rma-warranty/src/app/warranty-ui/warranty/warranty.page.html
+++ b/packages/rma-warranty/src/app/warranty-ui/warranty/warranty.page.html
@@ -22,6 +22,13 @@
         </ion-col>
         <ion-col class="ion-text-right">
           <ion-button
+            color="tertiary"
+            [disabled]="!dataSource.length"
+            (click)="downloadSerials()"
+          >
+            Download CSV
+          </ion-button>
+          <ion-button
             *ngIf="permissionState.warranty_claim.create"
             color="tertiary"
             [routerLink]="['/warranty/add-warranty-claim', 'add']"
